Redundant dot removed

--- a/knp/autodoc/footer.html
+++ b/knp/autodoc/footer.html
@@ -3,7 +3,7 @@
 <!-- start footer part -->
 <footer class="site-footer">
   <div class="copyright">
-    © 2023 AO Kaspersky Lab.
+    © 2023 AO Kaspersky Lab
   </div>
   <!--BEGIN GENERATE_TREEVIEW-->
   <div id="nav-path" class="navpath">
